# imagefield-bug

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1dbe5cead24a_add_imagefield_attribute.py  4419b0087177_init.py  74062ba07d74_add_user_model.py  9acc8a51798d_delete_img_attribute.py  c79e6c35b35a_update.py
app/: dependencies.py  main.py
app/core/models/: database.py  facilities.py  facilities_crud.py  users.py
app/core/schemas/: schemas.py
app/core/services/: auth.py  database_service.py  services.py
app/v1/: api.py
app/v1/endpoints/: insts.py  users.py
media/inst_pictures/: 0e7de452-156f-4f35-88be-5b4fdeb17e69  0e7de452-156f-4f35-88be-5b4fdeb17e69.metadata.json
